
[project]
name = "marley_ris_bridge"
version = "1.0.0"
description = "DICOM MWL SCP"
authors = [
    {name = "earthians"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynetdicom",
    "logzero",
    "requests",
]
[project.scripts]
marley-ris-bridge = "marley_ris_bridge.core:main"
